# PageMonk

./: .gitignore  DESIGN_SYSTEM.md  PROJECT_SUMMARY.md  README.md  demo.py  demo_balance_sheet.py  docker-compose.yml  main.py  output.md  pyproject.toml  run_backend.py  setup.sh  start.sh  start_pagemonk.sh
backend/: Dockerfile  README.md  requirements.txt  test_schema.py
backend/app/: __init__.py  database.py  main.py  models.py  processor.py
examples/: api_examples.md  contact_schema.json  contract_schema.json  invoice_schema.json  resume_schema.json
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: DocumentUpload.js  Header.js  Hero.js  Navbar.js  PageMonkLogo.js  Sidebar.js
frontend/src/pages/: Documents.js  Extract.js  Home.js  Parse.js  Schemas.js
frontend/src/services/: api.js
